feat: rev2 - light

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       body {
         margin: 0;
-        background: rgba(37, 39, 42, 1);
+        background: #efefef;
         color: #efefef;
         font-family: 'JetBrains Mono';
         min-height: 100vh;
@@ -29,8 +29,8 @@
       }
 
       .terminal-inner-container {
-        background: rgba(45, 47, 50, 1);
-        box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.2);
+        background: #22212c;
+        box-shadow: 1px 2px 8px rgba(34, 33, 44, 0.3);
         width: 100%;
 
         border-radius: 8px;
@@ -43,7 +43,7 @@
 
       .terminal-title-bar {
         height: 34px;
-        background: rgba(37, 39, 42, 1);
+        background: #191a22;
         border-radius: 8px 8px 0px 0px;
 
         display: flex;
@@ -84,7 +84,6 @@
       }
 
       .terminal-content-text {
-        color: rgba(101, 244, 172, 1);
         font-size: 28px;
       }
     </style>
