--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           rgba(236, 154, 229, 1) 100%
         );
 
-        font-family: 'JetBrains Mono';
+        font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
         font-weight: 400;
         min-height: 100vh;
 
