--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terminal UI with CSS Proof-of-concept</title>
-    <meta property="og:image" content="/screenshot.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <meta property="og:image" content="/screenshot.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       * {
@@ -113,12 +116,19 @@
       }
 
       .terminal-content-text {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+
         font-size: 18px;
         line-height: 36px;
         font-weight: 400;
 
         width: 100%;
         margin: 0 auto;
+        max-width: 700px;
       }
 
       .terminal-content-text h1 {
@@ -199,7 +209,14 @@
       }
 
       .yellow {
-        color: #d4dd83;
+        color: #eefc7a;
+      }
+
+      h1.content-heading {
+        font-size: 60px;
+        line-height: 80px;
+        text-align: center;
+        margin-top: 50px;
       }
     </style>
   </head>
@@ -216,28 +233,20 @@
               <div class="title-btn title-btn__green"></div>
             </div>
 
-            <div class="terminal-title-text">The <span class="blue">Principles</span> of Quick Hacks</div>
+            <div class="terminal-title-text">Hi! I'm Poom.</div>
           </div>
 
           <div class="terminal-content-container">
             <div class="terminal-content-text">
-              <p>$> <strong>cat</strong> <span class="yellow">~</span><span class="blue">/Wiki/ForTheLoveOfQuickHacks.md</span></p>
-
-              <h1>## The <span class="blue">Principles</span> of Quick Hacks</h1>
-
-              <p>
-                <ol>
-                  <li>Embrace Quick, Small and Stupid Hacks.</li>
-                  <li>The MVP should be doable within two hours.</li>
-                  <li>You're always learning when you're hacking.</li>
-                  <li>Hack in Public, so you can Learn in Public.</li>
-                </ol>
-              </p>
+              <h1 class="content-heading">
+                Quick Hacks. TypeScript. Terminal.
+                <span class="yellow">Poom.</span>
+              </h1>
             </div>
           </div>
 
           <div class="terminal-mode-line-container">
-            <div class="terminal-mode-indicator">NORMAL</div>
+            <div class="terminal-mode-indicator">INTRO</div>
             <div class="mode-indicator-triangle"></div>
             <div class="terminal-file-display">ForTheLoveOfQuickHacks.md</div>
           </div>
